--- a/index.html
+++ b/index.html
@@ -248,11 +248,11 @@
     <!-- Vision and Mission Section -->
     <div class="container mx-auto px-4 py-16">
         <div class="text-center mb-12">
-            <h2 class="text-3xl font-bold text-gray-800">Company Visions & Missions</h2>
-            <p class="text-md text-gray-600">Discover our vision and mission.</p>
+            <h2 class="text-3xl font-bold text-gray-800 scroll-animation">Company Visions & Missions</h2>
+            <p class="text-md text-gray-600 scroll-animation">Discover our vision and mission.</p>
         </div>
         <div class="flex flex-wrap justify-center gap-10">
-            <div class="max-w-md bg-white shadow-lg rounded-lg overflow-hidden">
+            <div class="max-w-md bg-white shadow-lg rounded-lg overflow-hidden scroll-animation">
                 <div class="px-6 py-4">
                     <h3 class="font-bold text-xl mb-2 text-gray-800">Our Vision</h3>
                     <p class="text-gray-600 text-base">
@@ -261,7 +261,7 @@
                 </div>
             </div>
 
-            <div class="max-w-md bg-white shadow-lg rounded-lg overflow-hidden">
+            <div class="max-w-md bg-white shadow-lg rounded-lg overflow-hidden scroll-animation">
                 <div class="px-6 py-4">
                     <h3 class="font-bold text-xl mb-2 text-gray-800">Our Mission</h3>
                     <p class="text-gray-600 text-base">
@@ -308,27 +308,27 @@
         </div>
 
     <!-- Systems Section -->
-    <div class="systems-section" id="systems">
+    <div class="systems-section bg-gray-100 py-16" id="systems">
         <div class="container mx-auto">
-            <h2>Our Systems</h2>
-            <div class="flex flex-wrap justify-center">
-                <div class="system-card">
+            <h2 class="text-4xl font-bold text-center text-gray-800 mb-8">Our Systems</h2>
+            <div class="flex flex-wrap justify-center gap-6">
+                <div class="system-card bg-white shadow-lg rounded-lg p-6 transition-transform transform hover:scale-105 hover:shadow-xl">
                     <h3 class="font-bold text-lg text-gray-800">HTML</h3>
                     <p class="text-gray-600">HTML (HyperText Markup Language) adalah bahasa markup standar untuk membuat halaman web. Ini memberikan struktur dasar untuk konten di internet.</p>
                 </div>
-                <div class="system-card">
+                <div class="system-card bg-white shadow-lg rounded-lg p-6 transition-transform transform hover:scale-105 hover:shadow-xl">
                     <h3 class="font-bold text-lg text-gray-800">CSS</h3>
                     <p class="text-gray-600">CSS (Cascading Style Sheets) digunakan untuk mendesain dan mengatur tata letak halaman web. Ini memungkinkan kami untuk membuat tampilan yang menarik dan responsif.</p>
                 </div>
-                <div class="system-card">
+                <div class="system-card bg-white shadow-lg rounded-lg p-6 transition-transform transform hover:scale-105 hover:shadow-xl">
                     <h3 class="font-bold text-lg text-gray-800">PHP</h3>
                     <p class="text-gray-600">PHP (Hypertext Preprocessor) adalah bahasa pemrograman server-side yang digunakan untuk pengembangan web. Ini memungkinkan kami untuk membuat aplikasi web dinamis dan interaktif.</p>
                 </div>
-                <div class="system-card">
+                <div class="system-card bg-white shadow-lg rounded-lg p-6 transition-transform transform hover:scale-105 hover:shadow-xl">
                     <h3 class="font-bold text-lg text-gray-800">Java</h3>
                     <p class="text-gray-600">Java adalah bahasa pemrograman yang digunakan untuk membangun aplikasi yang dapat dijalankan di berbagai platform. Ini dikenal karena keamanannya dan kemampuannya untuk menangani aplikasi berskala besar.</p>
                 </div>
-                <div class="system-card">
+                <div class="system-card bg-white shadow-lg rounded-lg p-6 transition-transform transform hover:scale-105 hover:shadow-xl">
                     <h3 class="font-bold text-lg text-gray-800">Python</h3>
                     <p class="text-gray-600">Python adalah bahasa pemrograman yang mudah dipelajari dan digunakan untuk berbagai aplikasi, termasuk pengembangan web, analisis data, dan kecerdasan buatan. Ini memungkinkan pengembangan yang cepat dan efisien.</p>
                 </div>
@@ -337,13 +337,13 @@
     </div>
 
     <!-- Technology Section -->
-    <div class="technology-section" id="technology">
+    <div class="technology-section bg-gray-100 py-16" id="technology">
         <div class="container mx-auto">
-            <h2>Teknologi Kami</h2>
-            <p>
-                ZRA Company memanfaatkan teknologi mutakhir untuk menghadirkan solusi inovatif yang memenuhi kebutuhan bisnis modern. Dengan mengintegrasikan bahasa pemrograman canggih, kerangka kerja, dan alat-alat terkini, kami mampu menciptakan aplikasi yang kuat dan skalabel. 
+            <h2 class="text-4xl font-bold text-center text-gray-800 mb-6">Our Technology</h2>
+            <p class="text-lg text-gray-600 mb-4">
+                ZRA Company memanfaatkan teknologi mutakhir untuk menghadirkan solusi inovatif yang memenuhi kebutuhan bisnis modern. Dengan mengintegrasikan bahasa pemrograman canggih, kerangka kerja, dan alat-alat terkini, kami mampu menciptakan aplikasi yang kuat dan skalabel.
             </p>
-            <p>
+            <p class="text-lg text-gray-600">
                 Kami berkomitmen untuk terus berada di garis depan kemajuan teknologi, memastikan bahwa klien kami mendapatkan solusi terbaik yang tidak hanya efisien tetapi juga berkelanjutan. Dengan pendekatan yang berfokus pada inovasi, kami siap membantu Anda menghadapi tantangan masa depan dan meraih kesuksesan di era digital.
             </p>
         </div>
